# fragments-of-the-sky

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Assets/Levels/: Objects.tsx  level-1-fragments-of-the-sky.  level-1-fragments-of-the-sky.csv  level-1-fragments-of-the-sky.tmx  level1-1.csv  level1-1.tmx  level1-swamp.csv  level1-swamp.tmx  level1-swamp_BlockLayer1.csv  level1-swamp_BlockLayer2.csv  level1-swamp_Camada de Blocos 1.csv  swamp.tsx  untitled.tiled-session
Assets/Levels/Level1/: level1-swamp_BlockLayer1.csv  level1-swamp_BlockLayer2.csv  level1.tmx  objects.tsx  swamp.tsx  test.tiled-session
Assets/Levels/Level1-1/: level1-1.csv  level1-1.tmx
Assets/Levels/Level2/: Tileset.tsx  level2.csv  level2.tmx
Assets/Levels/Level3/: Tileset.tsx  level3.tmx  level3_BlockLayer1.csv  level3_BlockLayer2.csv
Assets/Levels/Level4/: Combined.tsx  Desert.tsx  Mine.tsx  Swamp.tsx  level4.tmx  level4_BlockLayer1.csv  level4_BlockLayer2.csv
Assets/Levels/Test/: test.csv  test.tiled-session  test.tmx  test.tsx
Assets/Sprites/: tile_celeste_main.tsx
Assets/Sprites/Aeris/: Aeris.json
Assets/Sprites/Blocks/: blocks.json
Assets/Sprites/Goomba/: Goomba.json
Assets/Sprites/Mario/: Mario.json
Assets/Sprites/Scorpio/: Scorpio.json
Assets/Sprites/Snake/: Snake.json
Assets/Sprites/celeste_sprites/: flag.ini  level1.tmx  strawberrylight.ini  tile_celeste_main.tsx
Assets/Sprites/swamp_sprites/: Objects.tsx  swamp.tsx
Source/: DebugManager.h  Game.cpp  Game.h  Main.cpp
Source/Actors/: Actor.cpp  Actor.h  Aeris.cpp  Aeris.h  Block.cpp  Block.h  Collectible.cpp  Collectible.h  Enemy.cpp  Enemy.h  FlagBlock.cpp  FlagBlock.h  Fragment.cpp  Fragment.h  Object.cpp  Object.h  Spawner.cpp  Spawner.h  Void.cpp  Void.h
Source/Components/: Component.cpp  Component.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/Systems/: AudioSystem.cpp  AudioSystem.h  SpatialHashing.cpp  SpatialHashing.h
Source/UI/: HUD.cpp  HUD.h
Source/Utils/: CSV.h  Math.cpp  Math.h  Random.cpp  Random.h
(+18 files in other folders)
